--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,9 @@ knitr::opts_chunk$set(
 # glider_pilot_tools
 
 <!-- badges: start -->
+
 <!-- badges: end -->
 
 The goal of glider_pilot_tools is to provide glider pilots with additional information about vehicle health and science data. As well, it is a shareable platform built on R Shiny that can be used to keep non-pilot collaborators informed of mission progress without having to grant access to the piloting server.
+
+Requires [osgUtils](https://github.com/oceanscienceguru/osgUtils) to function.
