--- a/README.Rmd
+++ b/README.Rmd
@@ -11,13 +11,13 @@ knitr::opts_chunk$set(
 )
 ```
 
-# glider_pilot_tools
+# shiny_gliders
 
 <!-- badges: start -->
 
 <!-- badges: end -->
 
-The goal of glider_pilot_tools is to provide glider pilots with additional information about vehicle health and science data. As well, it is a shareable platform built on R Shiny that can be used to keep non-pilot collaborators informed of mission progress without having to grant access to the piloting server.
+The goal of this tool is to provide glider pilots with additional information about vehicle health and science data. As well, it is a shareable platform built on R Shiny that can be used to keep non-pilot collaborators informed of mission progress without having to grant access to the piloting server.
 
 Minimal sbdlist requirements for full features:
 
